--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.1.6",
+    "@types/qrcode": "^1.5.6",
+    "framer-motion": "^12.29.2",
     "next": "14.2.21",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.7.0",
