--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/qrcode": "^1.5.6",
     "framer-motion": "^12.29.2",
     "next": "14.2.21",
+    "pptxgenjs": "^4.0.1",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.7.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@types/node": "^20.17.12",
