feat: implement God View (Mass Audit) with Leaflet and CSV parsing

--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
     "@react-pdf/renderer": "^4.1.6",
     "@types/qrcode": "^1.5.6",
     "framer-motion": "^12.29.2",
+    "leaflet": "^1.9.4",
     "next": "^14.2.23",
+    "papaparse": "^5.5.3",
     "pptxgenjs": "^4.0.1",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "recharts": "^3.7.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20.17.12",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
