chore(audit): add Playwright E2E tests, CI pipeline, CSP and Sentry config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
         "strict": true,
         "noUncheckedIndexedAccess": true,
         "exactOptionalPropertyTypes": true,
+        "types": [
+            "node",
+            "jest"
+        ],
         "noEmit": true,
         "esModuleInterop": true,
         "module": "esnext",
