--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.1.6",
+    "@sentry/nextjs": "^10.37.0",
     "@types/qrcode": "^1.5.6",
     "framer-motion": "^12.29.2",
     "leaflet": "^1.9.4",
@@ -27,9 +28,10 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.0",
     "@types/jest": "^29.5.14",
     "@types/leaflet": "^1.9.21",
-    "@types/node": "^20.17.12",
+    "@types/node": "^20.19.30",
     "@types/papaparse": "^5.5.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
@@ -39,7 +41,7 @@
     "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.7.3"
   },
   "overrides": {
