--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --webpack",
     "build": "next build --webpack",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -36,7 +36,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.0.0",
+    "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.6",
     "jest": "^29.7.0",
     "postcss": "^8.4.49",
