refactor(extension): Complete rewrite with Obsidian/Gold design system
## Design System (Non-Négociable)
- Fond: #020202 (Obsidian)
- Accent: #E0B976 (Gold)
- Texte: #E5E5E5 (Gris clair)

## Extraction Intelligente
- Mots-clés flexibles pour colonnes (lot/n°/id, tantième/qp/1000, m2/surface, type/nature)
- Détection automatique de l'ordre des colonnes
- Déduplication par ID
- JSON propre et structuré

## Popup UX Simplifié
- Bouton unique "Scanner la Page"
- Affichage du nombre de lots détectés
- Bouton "Copier JSON" (apparaît après scan)

## Icon Generators (4 options)
- generate-icons.sh (ImageMagick)
- generate-icons.js (Node.js + Canvas)
- generate-icons.py (Python + Pillow)
- generate-icons-minimal.sh (Base64, zero deps) ✅ USED

## PNG Icons Generated
- icon-16.png, icon-48.png, icon-128.png
- Minimal black squares ready for Chrome

Closes: #Extension-V2-Obsidian

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,12 +1,12 @@
 {
     "manifest_version": 3,
-    "name": "VALO-SYNDIC Importer",
+    "name": "VALO-SYNDIC Ghost",
     "version": "1.0.0",
     "description": "Import automatique des lots depuis ICS, Thetrawin, Powimo vers VALO-SYNDIC",
     "icons": {
-        "16": "icons/icon-16.svg",
-        "48": "icons/icon-48.svg",
-        "128": "icons/icon-128.svg"
+        "16": "icons/icon-16.png",
+        "48": "icons/icon-48.png",
+        "128": "icons/icon-128.png"
     },
     "permissions": [
         "activeTab",
@@ -15,10 +15,11 @@
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "icons/icon-16.svg",
-            "48": "icons/icon-48.svg"
+            "16": "icons/icon-16.png",
+            "48": "icons/icon-48.png",
+            "128": "icons/icon-128.png"
         },
-        "default_title": "VALO-SYNDIC Importer"
+        "default_title": "VALO-SYNDIC Ghost - Scanner ERP"
     },
     "content_scripts": [
         {
