feat: Add MaPrimeRénov' Copro 2026 subsidy calculation logic and a comparative display component, alongside new Supabase client integration and related tests.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-pdf/renderer": "^4.1.6",
     "@sentry/nextjs": "^10.37.0",
+    "@supabase/supabase-js": "^2.93.3",
     "@types/qrcode": "^1.5.6",
     "framer-motion": "^12.29.2",
     "leaflet": "^1.9.4",
