--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "next start",
     "lint": "eslint . --max-warnings=0",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "import:dpe": "node scripts/data-import/import-dpe-49.mjs"
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.1.6",
     "@sentry/nextjs": "^10.37.0",
     "@supabase/supabase-js": "^2.93.3",
     "@types/qrcode": "^1.5.6",
+    "cli-progress": "^3.12.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.29.2",
     "leaflet": "^1.9.4",
     "next": "^16.1.6",
@@ -30,6 +33,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.58.0",
+    "@types/cli-progress": "^3.11.6",
     "@types/jest": "^29.5.14",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^20.19.30",
