fix(ci): FORCE .env.local creation before tests (brute force strategy)

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,18 +9,10 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    # ON DÉPLACE LES VARIABLES ICI (Niveau Job)
-    # Comme ça, toutes les étapes (build, start server, test) y ont accès
-    env:
-      NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
-      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
-      NEXT_PUBLIC_GOOGLE_MAPS_KEY: ${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_KEY }}
-      CI: true
 
     steps:
     - uses: actions/checkout@v4
     
-    # On force Node 20 comme demandé par ton Next.js récent
     - uses: actions/setup-node@v4
       with:
         node-version: 20
@@ -31,6 +23,14 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
 
+    # ÉTAPE 1 : ON CRÉE LE FICHIER PHYSIQUE (Force Brute)
+    - name: Create .env.local file
+      run: |
+        echo "NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}" >> .env.local
+        echo "NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}" >> .env.local
+        echo "NEXT_PUBLIC_GOOGLE_MAPS_KEY=${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_KEY }}" >> .env.local
+
+    # ÉTAPE 2 : ON LANCE LE TEST
     - name: Run Playwright tests
       run: npx playwright test
 
