--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.29.2",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.563.0",
     "next": "^16.1.6",
     "papaparse": "^5.5.3",
     "pptxgenjs": "^4.0.1",
