--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "import:dpe": "node scripts/data-import/import-dpe-49.mjs"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-pdf/renderer": "^4.1.6",
     "@sentry/nextjs": "^10.37.0",
     "@supabase/supabase-js": "^2.93.3",
     "@types/qrcode": "^1.5.6",
+    "class-variance-authority": "^0.7.1",
     "cli-progress": "^3.12.0",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.29.2",
     "leaflet": "^1.9.4",
@@ -29,6 +32,7 @@
     "react-dom": "^19.2.4",
     "react-leaflet": "^4.2.1",
     "recharts": "^3.7.0",
+    "tailwind-merge": "^3.4.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.10"
   },
