--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "cli-progress": "^3.12.0",
     "clsx": "^2.1.1",
+    "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.29.2",
     "leaflet": "^1.9.4",
@@ -52,6 +53,7 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.6",
+    "tsx": "^4.21.0",
     "typescript": "^5.7.3"
   },
   "overrides": {
