--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "qrcode": "^1.5.4",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-hook-form": "^7.62.0",
     "react-leaflet": "^4.2.1",
     "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0",
@@ -46,6 +47,7 @@
     "@types/papaparse": "^5.5.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@hookform/resolvers": "^4.1.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.1.0",
